--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Minimal Resume Template</title>
+	<title>Daniel Gonçalo - Front End Developer</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -9,12 +9,10 @@
 
 	<div class="container">
 		<div class="hero">
-			<h1 class="name"><strong>Daniel</strong> Gonçalo</h1>
-			<span class="job-title">Developer</span>
-			<span class="email">abbie.bradley@gmail.com</span>
-
-			<h2 class="lead">Development and design of web applications 
-for startups and large companies</h2>
+			<h1 class="name"><strong>Daniel Gonçalo</strong></h1>
+			<span class="job-title">Front-End Developer</span>
+			<span class="email">dany4k@gmail.com</span>
+			<h2 class="resume">Building things for the web for startups and larger companies.</h2>
 		</div>
 	</div>
 
