--- a/index.html
+++ b/index.html
@@ -12,56 +12,37 @@
 			<h1 class="name"><strong>Daniel Gonçalo</strong></h1>
 			<span class="job-title">Front-End Developer</span>
 			<span class="email">dany4k@gmail.com</span>
-			<h2 class="resume">Building things for the web for startups and larger companies.</h2>
 		</div>
 	</div>
 
-<!-- Skills and intrest section -->
 	<div class="container">
-
-		<div class="sections">
-			<h2 class="section-title">Skills</h2>
-
-			<div class="list-card">
-				<span class="exp">+ 5 years</span>
-				<div>
-					<h3>Object programming & frameworks</h3>
-					<span>PHP, Symfony, Laravel, Silex, …</span>
-				</div>
-			</div>
-			
-			<div class="list-card">
-				<span class="exp">+ 3 years</span>
-				<div>
-					<h3>Design integration</h3>
-					<span>Style and tools, JS Frameworks</span>
-				</div>
-			</div>	
-					
-			<div class="list-card">
-				<span class="exp">+ 6 years</span>
-				<div>
-					<h3>Linux</h3>
-					<span>Scripting, Servers management and protocols, Automation</span>
-				</div>
-			</div>
-
-
+		<div class="hero">
+			<h2 class="section-title"><span class="numbered">01.</span> About Me</h2>
+			<p class="resume2">Hello! My name is Daniel and I am a software engineer with a big focus on Front End Development.</p>
+			<p class="resume2">I have over 5 years of front-end development working with HTML, CSS and Javascript. This includes frameworks like
+				Wordpress, Drupal, Prestashop, Blazor, Microsoft Power Pages and React. I have also done some small projects in Android Studio, MS Power Automate
+				and MS Power BI.
+			</p>
+			<p class="resume2"> During these years I have worked for smaller startups, state owned companies like IP (Infraestruturas de Portugal) and big consultant 
+				companies like PwC (PricewaterhouseCoopers) building websites, portals and various web applications.
+			</p>
 		</div>
+	</div>
+
+<!-- Skills and languages -->
+	<div class="container">
 		<div class="sections">
-				<h2 class="section-title">Interests</h2>
-				
+				<h2 class="section-title"><span class="numbered">02.</span>Skills</h2>
 				<div class="list-card">
 					<div>
-						<h3>Scripting languages</h3>
-						<span>PHP, JS, Bash, Python</span>
+						<h3>Programming Languages</h3>
+						<p class="description_languages">HTML, CSS, Javascript, Python</p>
 					</div>
 				</div>	
-
 				<div class="list-card">
 					<div>
-						<h3>Hacking</h3>
-						<span>Linux, Crawlers, Bots, Network</span>
+						<h3>Frameworks and Libraries</h3>
+						<p class="description_languages">Wordpress,  Drupal, Prestashop, React, Bootstrap</p>
 					</div>
 				</div>		
 		</div>
@@ -70,107 +51,90 @@
 	<!-- Achievements -->
 
 	<div class="container cards">
-		
+		<h2 class="section-title"><span class="numbered">03.</span>Some things I have worked on</h2>
 		<div class="card">
 			<div class="skill-level">
-				<span>+</span>
-				<h2>60</h2>
+				<img src="images\prestashop.jpg" alt="website-image-prestashop" class="website-image">
 			</div>
 
 			<div class="skill-meta">
-				<h3>Projects</h3>
-				<span>Adapting and creating solutions for customer's needs</span>
+				<h3>Portal Mestre de Obras</h3>
+				<span>Building a Portal using the Prestashop framework with HTML and CSS.</span>
 			</div>
 		</div>
-
-			
 		<div class="card">
 			<div class="skill-level">
-				<h2>50</h2>
-				<span>%</span>
+				<img src="images\idtraining.jpg" alt="website-image-idtraining" class="website-image">
 			</div>
 
 			<div class="skill-meta">
-				<h3>Web</h3>
-				<span>Applications development integrating third-party services and mobile client(s)</span>
+				<h3>ID Training Wordpress Website</h3>
+				<span>Theme Instalation and Setup, Customization, Plugin Setup and SEO Optimization for the company <a href="https://www.idtraining.pt/" target="_blank">website</a>.</span>
 			</div>
 		</div>
-
-			
 		<div class="card">
 			<div class="skill-level">
-				<h2>30</h2>
-				<span>%</span>
+				<img src="images\ip.jpg" alt="website-image-ip" class="website-image">
 			</div>
 
 			<div class="skill-meta">
-				<h3>Technical solutions</h3>
-				<span>Such as web services, scripts, configurations</span>
+				<h3>Infraestruturas de Portugal</h3>
+				<span>Front End Development working on Drupal framework, coding in HTML, CSS and JSS for 4 websites (<a href="https://www.infraestruturasdeportugal.pt/" target="_blank">IP</a>, <a href="https://www.ippatrimonio.pt/" target="_blank">IPP</a>, <a href="https://www.ipengenharia.pt/" target="_blank">IPE</a> e <a href="https://servicos.infraestruturasdeportugal.pt/" target="_blank">IPS</a>).</span>
 			</div>
 		</div>
-
-
 		<div class="card">
 			<div class="skill-level">
-				<h2>20</h2>
-				<span>%</span>
+				<img src="images\pwc.jpg" alt="website-image-pwc" class="website-image">
 			</div>
 
 			<div class="skill-meta">
-				<h3>Leading</h3>
-				<span>Web projects and ensure the quality of delivery</span>
+				<h3>PwC Portugal</h3>
+				<span>Worked on several external client projects and <a href="https://blueeconomybarometer.pwc.pt/" target="_blank">internal projects</a>. HTML/CSS/JS coding for integration with Blazor Web Apps, Microsoft Power Apps and PowerBI.</span>
 			</div>
 		</div>
-
 	</div>
 
-	<!-- Timeeline -->
+	<!-- Job Timeline -->
 
 	<div class="container">
+		<p class="section-title line">04. Job Experiences</p>
 		<ol class="timeline">
 		  <li>
-		    <p class="line">Experiences</p>
 		    <span class="point"></span>
 		    <p class="description">
-		      Lead Developer @Geronimo
+		      Front End Developer @Portal Mestre de Obras
 		    </p>
-		    <span class="date">Today - Apr. 2016</span>
+		    <span class="date">2017 - 2018</span>
 		  </li>
-
 		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      Freelance
+		      Front End Developer and Website Manager @ID Training
 		    </p>
-		    <span class="date">Apr. 2016 - Sep. 2015</span>
+		    <span class="date">Jan. 2018 - Dez. 2020</span>
 		  </li>
-
-		  		  <li>
-		    <p class="line">Education</p>
+		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      DUT "Métiers du multimédia et de l'internet"
+		      Front End Developer @Infraestruturas de Portugal
 		    </p>
-		    <span class="date">2015 - 2013</span>
+		    <span class="date">Jan. 2021 - Jul. 2021</span>
 		  </li>
-
-		  		  <li>
+		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      Art & Design studies
+		      Front End Analyst @PwC Portugal
 		    </p>
-		    <span class="date">2013 - 2008</span>
+		    <span class="date">Aug. 2021 - Jan. 2023</span>
 		  </li>
 		</ol>
-
 	</div>
 
 
 	<br><br>
 
-
 	<footer class="container">
-		<span style="font-size: 16px;" Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
+		<span style="font-size: 16px; color:#8892b0">Coded by</span> <a href="https://www.linkedin.com/in/daniel-gonçalo/">Daniel Gonçalo</a></span>
 	</footer>
 
 
