--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	<!-- Job Timeline -->
 
 	<div class="container">
-		<p class="section-title line">04. Job Experiences</p>
+		<p class="section-title line"><span class="numbered">04.</span>Job Experiences</p>
 		<ol class="timeline">
 		  <li>
 		    <span class="point"></span>
