Added Contact Section; Added Navbar; Added Resume;

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Daniel Gonçalo - Front End Developer</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
+	<div class="container1">
+		<p class="nav"><a href="#contact"><span class="numbered_nav">05.</span>Contact Me</a></p>
+		<p class="nav"><a href="#experiences"><span class="numbered_nav">04.</span>Experiences</a></p>
+		<p class="nav"><a href="#projects"><span class="numbered_nav">03.</span>Projects</a></p>
+		<p class="nav"><a href="#skills"><span class="numbered_nav">02.</span>Skills</a></p>
+		<p class="nav"><a href="#about-me"><span class="numbered_nav">01.</span>About me</a></p>
+	</div>
 
 	<div class="container">
 		<div class="hero">
@@ -15,42 +25,46 @@
 		</div>
 	</div>
 
-	<div class="container">
+	<div class="container" id="about-me">
 		<div class="hero">
 			<h2 class="section-title"><span class="numbered">01.</span> About Me</h2>
-			<p class="resume2">Hello! My name is Daniel and I am a software engineer with a big focus on Front End Development.</p>
-			<p class="resume2">I have over 5 years of front-end development working with HTML, CSS and Javascript. This includes frameworks like
-				Wordpress, Drupal, Prestashop, Blazor, Microsoft Power Pages and React. I have also done some small projects in Android Studio, MS Power Automate
+			<p class="resume2">Hello! My name is Daniel and I am a software engineer with a big focus on Front End
+				Development.</p>
+			<p class="resume2">I have over 5 years of front-end development working with HTML, CSS and Javascript. This
+				includes frameworks like
+				Wordpress, Drupal, Prestashop, Blazor, Microsoft Power Pages and React. I have also done some small
+				projects in Android Studio, MS Power Automate
 				and MS Power BI.
 			</p>
-			<p class="resume2"> During these years I have worked for smaller startups, state owned companies like IP (Infraestruturas de Portugal) and big consultant 
+			<p class="resume2"> During these years I have worked for smaller startups, state owned companies like IP
+				(Infraestruturas de Portugal) and big consultant
 				companies like PwC (PricewaterhouseCoopers) building websites, portals and various web applications.
 			</p>
 		</div>
 	</div>
 
-<!-- Skills and languages -->
-	<div class="container">
+	<!-- Skills and languages -->
+	<div class="container" id="skills">
 		<div class="sections">
-				<h2 class="section-title"><span class="numbered">02.</span>Skills</h2>
-				<div class="list-card">
-					<div>
-						<h3>Programming Languages</h3>
-						<p class="description_languages">HTML, CSS, Javascript, Python</p>
-					</div>
-				</div>	
-				<div class="list-card">
-					<div>
-						<h3>Frameworks and Libraries</h3>
-						<p class="description_languages">Wordpress,  Drupal, Prestashop, React, Bootstrap</p>
-					</div>
-				</div>		
+			<h2 class="section-title"><span class="numbered">02.</span>Skills</h2>
+			<div class="list-card">
+				<div>
+					<h3>Programming Languages</h3>
+					<p class="description_languages">HTML, CSS, Javascript, Python</p>
+				</div>
+			</div>
+			<div class="list-card">
+				<div>
+					<h3>Frameworks and Libraries</h3>
+					<p class="description_languages">Wordpress, Drupal, Prestashop, React, Bootstrap</p>
+				</div>
+			</div>
 		</div>
 	</div>
 
 	<!-- Achievements -->
 
-	<div class="container cards">
+	<div class="container cards" id="projects">
 		<h2 class="section-title"><span class="numbered">03.</span>Some things I have worked on</h2>
 		<div class="card">
 			<div class="skill-level">
@@ -69,7 +83,8 @@
 
 			<div class="skill-meta">
 				<h3>ID Training Wordpress Website</h3>
-				<span>Theme Instalation and Setup, Customization, Plugin Setup and SEO Optimization for the company <a href="https://www.idtraining.pt/" target="_blank">website</a>.</span>
+				<span>Theme Instalation and Setup, Customization, Plugin Setup and SEO Optimization for the company <a
+						href="https://www.idtraining.pt/" target="_blank">website</a>.</span>
 			</div>
 		</div>
 		<div class="card">
@@ -79,7 +94,11 @@
 
 			<div class="skill-meta">
 				<h3>Infraestruturas de Portugal</h3>
-				<span>Front End Development working on Drupal framework, coding in HTML, CSS and JSS for 4 websites (<a href="https://www.infraestruturasdeportugal.pt/" target="_blank">IP</a>, <a href="https://www.ippatrimonio.pt/" target="_blank">IPP</a>, <a href="https://www.ipengenharia.pt/" target="_blank">IPE</a> e <a href="https://servicos.infraestruturasdeportugal.pt/" target="_blank">IPS</a>).</span>
+				<span>Front End Development working on Drupal framework, coding in HTML, CSS and JSS for 4 websites (<a
+						href="https://www.infraestruturasdeportugal.pt/" target="_blank">IP</a>, <a
+						href="https://www.ippatrimonio.pt/" target="_blank">IPP</a>, <a
+						href="https://www.ipengenharia.pt/" target="_blank">IPE</a> e <a
+						href="https://servicos.infraestruturasdeportugal.pt/" target="_blank">IPS</a>).</span>
 			</div>
 		</div>
 		<div class="card">
@@ -89,54 +108,65 @@
 
 			<div class="skill-meta">
 				<h3>PwC Portugal</h3>
-				<span>Worked on several external client projects and <a href="https://blueeconomybarometer.pwc.pt/" target="_blank">internal projects</a>. HTML/CSS/JS coding for integration with Blazor Web Apps, Microsoft Power Apps and PowerBI.</span>
+				<span>Worked on several external client projects and <a href="https://blueeconomybarometer.pwc.pt/"
+						target="_blank">internal projects</a>. HTML/CSS/JS coding for integration with Blazor Web Apps,
+					Microsoft Power Apps and PowerBI.</span>
 			</div>
 		</div>
 	</div>
 
 	<!-- Job Timeline -->
 
-	<div class="container">
+	<div class="container" id="experiences">
 		<p class="section-title line"><span class="numbered">04.</span>Job Experiences</p>
 		<ol class="timeline">
-		  <li>
-		    <span class="point"></span>
-		    <p class="description">
-		      Front End Developer @Portal Mestre de Obras
-		    </p>
-		    <span class="date">2017 - 2018</span>
-		  </li>
-		  <li>
-		    <span class="point"></span>
-		    <p class="description">
-		      Front End Developer and Website Manager @ID Training
-		    </p>
-		    <span class="date">Jan. 2018 - Dez. 2020</span>
-		  </li>
-		  <li>
-		    <span class="point"></span>
-		    <p class="description">
-		      Front End Developer @Infraestruturas de Portugal
-		    </p>
-		    <span class="date">Jan. 2021 - Jul. 2021</span>
-		  </li>
-		  <li>
-		    <span class="point"></span>
-		    <p class="description">
-		      Front End Analyst @PwC Portugal
-		    </p>
-		    <span class="date">Aug. 2021 - Jan. 2023</span>
-		  </li>
+			<li>
+				<span class="point"></span>
+				<p class="description">
+					Front End Developer @Portal Mestre de Obras
+				</p>
+				<span class="date">2017 - 2018</span>
+			</li>
+			<li>
+				<span class="point"></span>
+				<p class="description">
+					Front End Developer and Website Manager @ID Training
+				</p>
+				<span class="date">Jan. 2018 - Dez. 2020</span>
+			</li>
+			<li>
+				<span class="point"></span>
+				<p class="description">
+					Front End Developer @Infraestruturas de Portugal
+				</p>
+				<span class="date">Jan. 2021 - Jul. 2021</span>
+			</li>
+			<li>
+				<span class="point"></span>
+				<p class="description">
+					Front End Analyst @PwC Portugal
+				</p>
+				<span class="date">Aug. 2021 - Jan. 2023</span>
+			</li>
 		</ol>
+	</div>
+
+	<div class="container  mt-10" id="contact">
+		<p class="section-title line"><span class="numbered">05.</span>Get in Touch</p>
+		<p class="resume2">Currently looking for new opportunities, my inbox is always open!</p>
+		<p class="resume2">You can contact me by email or through Linkedin.</p>
+		<span class="job-title"><a href="\attachments/Daniel Gonçalo CV 2022.pdf" download="Daniel Gonçalo CV 2022.pdf">Download Resume</a></span>
 	</div>
 
 
 	<br><br>
 
 	<footer class="container">
-		<span style="font-size: 16px; color:#8892b0">Coded by</span> <a href="https://www.linkedin.com/in/daniel-gonçalo/">Daniel Gonçalo</a></span>
+		<span style="font-size: 16px; color:#8892b0">Coded by</span> <a
+			href="https://www.linkedin.com/in/daniel-gonçalo/"> <span style="font-size: 15px;">Daniel
+				Gonçalo</span></a></span>
 	</footer>
 
-
 </body>
+
 </html>
