--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 	<!-- Job Timeline -->
 
-	<div class="container" id="experiences">
+	<div class="container div-no-mobile" id="experiences">
 		<p class="section-title line"><span class="numbered">04.</span>Job Experiences</p>
 		<ol class="timeline">
 			<li>
@@ -151,11 +151,30 @@
 		</ol>
 	</div>
 
-	<div class="container  mt-10" id="contact">
+	<!-- Mobile Timeline -->
+	<div class="container-mobile" id="experiences">
+		<p class="section-title line"><span class="numbered">04.</span>Job Experiences</p>
+		<p class="description-mobile">
+			<span class="mobile-font">2017 - 2018</span> - Front End Developer @Portal Mestre de Obras
+		</p>
+		<p class="description-mobile">
+			<span class="mobile-font">Jan. 2018 - Dez. 2020</span> - Front End Developer and Website Manager @ID Training
+		</p>
+		<p class="description-mobile">
+			<span class="mobile-font">Jan. 2021 - Jul. 2021</span> - Front End Developer @Infraestruturas de Portugal
+		</p>
+		<p class="description-mobile">
+			<span class="mobile-font">Aug. 2021 - Jan. 2023</span> - Front End Analyst @PwC Portugal
+		</p>
+	</div>
+
+	<!-- Contact -->
+	<div class="container  mt-10 container-contact" id="contact">
 		<p class="section-title line"><span class="numbered">05.</span>Get in Touch</p>
 		<p class="resume2">Currently looking for new opportunities, my inbox is always open!</p>
 		<p class="resume2">You can contact me by email or through Linkedin.</p>
-		<span class="job-title"><a href="\attachments/Daniel Gonçalo CV 2022.pdf" download="Daniel Gonçalo CV 2022.pdf">Download Resume</a></span>
+		<span class="job-title"><a href="\attachments/Daniel Gonçalo CV 2022.pdf"
+				download="Daniel Gonçalo CV 2022.pdf">Download Resume</a></span>
 	</div>
 
 
@@ -163,7 +182,7 @@
 
 	<footer class="container">
 		<span style="font-size: 16px; color:#8892b0">Coded by</span> <a
-			href="https://www.linkedin.com/in/daniel-gonçalo/"> <span style="font-size: 15px;">Daniel
+			href="https://www.linkedin.com/in/daniel-gonçalo/"> <span style="font-size: 15px;" color: #64ffda;>Daniel
 				Gonçalo</span></a></span>
 	</footer>
 
