--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Daniel Gonçalo - Front End Developer</title>
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
