--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<title>Daniel Gonçalo - Front End Developer</title>
-	<link rel="icon" type="image/x-icon" sizes="32x32" href="images\favicon.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-32x32.png">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
