--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 			<div class="list-card">
 				<div>
 					<h3>Programming Languages</h3>
-					<p class="description_languages">HTML, CSS, Javascript, Python</p>
+					<p class="description_languages">HTML, CSS, Javascript</p>
 				</div>
 			</div>
 			<div class="list-card">
 				<div>
 					<h3>Frameworks and Libraries</h3>
-					<p class="description_languages">Wordpress, Drupal, Prestashop, React, Bootstrap</p>
+					<p class="description_languages">Wordpress, Drupal, Prestashop, Angular, Bootstrap</p>
 				</div>
 			</div>
 		</div>
