Several changes; Icons added;

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
+	<script src="https://kit.fontawesome.com/bb14550322.js" crossorigin="anonymous"></script>
 	<title>Daniel Gonçalo - Front End Developer</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-16x16.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-32x32.png">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
-
 <body>
 	<script type="text/javascript" src="/myscript.js"></script>
 	<div class="container1">
@@ -30,12 +30,13 @@
 
 	<div class="container" id="about-me">
 		<div class="hero">
-			<h2 class="section-title"><span class="numbered">01.</span> About Me</h2>
+			<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-address-card"></i> 01.</span>About Me </h2>
+			<img src="images/profile-pic.jpg" class="profile-picture animate__fadeInDownBig" alt="profile-picture">
 			<p class="resume2">Hello! My name is Daniel and I am a software engineer with a big focus on Front End
 				Development.</p>
 			<p class="resume2">I have over 5 years of front-end development working with HTML, CSS and Javascript. This
 				includes frameworks like
-				Wordpress, Drupal, Prestashop, Blazor, Microsoft Power Pages and React. I have also done some small
+				Wordpress, Drupal, Prestashop, Blazor, Microsoft Power Pages and Angular. I have also done some small
 				projects in Android Studio, MS Power Automate
 				and MS Power BI.
 			</p>
@@ -49,16 +50,16 @@
 	<!-- Skills and languages -->
 	<div class="container" id="skills">
 		<div class="sections">
-			<h2 class="section-title"><span class="numbered">02.</span>Skills</h2>
+			<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-gear"></i> 02.</span>Skills</h2>
 			<div class="list-card">
 				<div>
-					<h3>Programming Languages</h3>
+					<h3><i class="fa-solid fa-laptop-code"></i> Programming Languages</h3>
 					<p class="description_languages">HTML, CSS, Javascript</p>
 				</div>
 			</div>
 			<div class="list-card">
 				<div>
-					<h3>Frameworks and Libraries</h3>
+					<h3><i class="fa-solid fa-database"></i> Frameworks and Libraries</h3>
 					<p class="description_languages">Wordpress, Drupal, Prestashop, Angular, Bootstrap</p>
 				</div>
 			</div>
@@ -67,7 +68,7 @@
 
 	<!-- Achievements -->
 	<div class="container cards" id="projects">
-		<h2 class="section-title"><span class="numbered">03.</span>Some things I have worked on</h2>
+		<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-wrench"></i> 03.</span>Some things I have worked on</h2>
 		<div class="card">
 			<div class="skill-level">
 				<img src="images\prestashop.jpg" alt="website-image-prestashop" class="website-image">
@@ -120,7 +121,7 @@
 	<!-- Job Timeline -->
 
 	<div class="container div-no-mobile" id="experiences">
-		<p class="section-title line"><span class="numbered">04.</span>Job Experiences</p>
+		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-briefcase"></i> 04.</span>Job Experiences</p>
 		<ol class="timeline">
 			<li>
 				<span class="point"></span>
@@ -155,12 +156,13 @@
 
 	<!-- Mobile Timeline -->
 	<div class="container-mobile" id="experiences">
-		<p class="section-title line"><span class="numbered">04.</span>Job Experiences</p>
+		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-briefcase"></i> 04.</span>Job Experiences</p>
 		<p class="description-mobile">
 			<span class="mobile-font">2017 - 2018</span> - Front End Developer @Portal Mestre de Obras
 		</p>
 		<p class="description-mobile">
-			<span class="mobile-font">Jan. 2018 - Dez. 2020</span> - Front End Developer and Website Manager @ID Training
+			<span class="mobile-font">Jan. 2018 - Dez. 2020</span> - Front End Developer and Website Manager @ID
+			Training
 		</p>
 		<p class="description-mobile">
 			<span class="mobile-font">Jan. 2021 - Jul. 2021</span> - Front End Developer @Infraestruturas de Portugal
@@ -172,9 +174,10 @@
 
 	<!-- Contact -->
 	<div class="container  mt-10 container-contact" id="contact">
-		<p class="section-title line"><span class="numbered">05.</span>Get in Touch</p>
+		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-phone"></i> 05.</span>Get in Touch</p>
 		<p class="resume2">Currently looking for new opportunities, my inbox is always open!</p>
-		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
+		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
+			through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
 		<span class="job-title"><a href="\attachments/Daniel Gonçalo CV 2023.pdf"
 				download="Daniel Gonçalo CV 2023.pdf">Download Resume</a></span>
 	</div>
@@ -183,9 +186,12 @@
 	<br><br>
 
 	<footer class="container">
-		<span style="font-size: 16px; color:#8892b0">Coded by</span> <a
+		<a href="https://www.linkedin.com/in/daniel-gonçalo/"><i class="fa-brands fa-linkedin-in icon-color mr-2"></a></i><a href="https://github.com/Dany4k"><i class="fa-brands fa-github icon-color"></i></a>
+		<br>
+		<span style="font-size: 16px; color:#8892b0; margin-top: 1%;" >Coded by</span> <a
 			href="https://www.linkedin.com/in/daniel-gonçalo/"> <span style="font-size: 15px;" color: #64ffda;>Daniel
 				Gonçalo</span></a></span>
 	</footer>
 </body>
+
 </html>
