--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 	<script type="text/javascript" src="/myscript.js"></script>
 	<div class="container1">
@@ -28,15 +29,18 @@
 		</div>
 	</div>
 
-	<div class="container" id="about-me">
+	<div class="container about-me-container" id="about-me">
 		<div class="hero">
-			<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-address-card"></i> 01.</span>About Me </h2>
+			<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-address-card"></i>
+					01.</span>About Me </h2>
 			<img src="images/profile-pic.jpg" class="profile-picture animate__fadeInDownBig" alt="profile-picture">
 			<p class="resume2">Hello! My name is Daniel and I am a software engineer with a big focus on Front End
 				Development.</p>
-			<p class="resume2">I have over 5 years of front-end development working with HTML, CSS and Javascript. This
+			<p class="resume2">I have over 5 years of front-end development working with HTML, CSS and Javascript.
+				This
 				includes frameworks like
-				Wordpress, Drupal, Prestashop, Blazor, Microsoft Power Pages and Angular. I have also done some small
+				Wordpress, Drupal, Prestashop, Blazor, Microsoft Power Pages and Angular. I have also done some
+				small
 				projects in Android Studio, MS Power Automate
 				and MS Power BI.
 			</p>
@@ -46,9 +50,8 @@
 			</p>
 		</div>
 	</div>
-
 	<!-- Skills and languages -->
-	<div class="container" id="skills">
+	<div class="container been-animated" id="skills">
 		<div class="sections">
 			<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-gear"></i> 02.</span>Skills</h2>
 			<div class="list-card">
@@ -68,7 +71,8 @@
 
 	<!-- Achievements -->
 	<div class="container cards" id="projects">
-		<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-wrench"></i> 03.</span>Some things I have worked on</h2>
+		<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-wrench"></i> 03.</span>Some things I have
+			worked on</h2>
 		<div class="card">
 			<div class="skill-level">
 				<img src="images\prestashop.jpg" alt="website-image-prestashop" class="website-image">
@@ -121,7 +125,8 @@
 	<!-- Job Timeline -->
 
 	<div class="container div-no-mobile" id="experiences">
-		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-briefcase"></i> 04.</span>Job Experiences</p>
+		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-briefcase"></i> 04.</span>Job
+			Experiences</p>
 		<ol class="timeline">
 			<li>
 				<span class="point"></span>
@@ -156,7 +161,8 @@
 
 	<!-- Mobile Timeline -->
 	<div class="container-mobile" id="experiences">
-		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-briefcase"></i> 04.</span>Job Experiences</p>
+		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-briefcase"></i> 04.</span>Job
+			Experiences</p>
 		<p class="description-mobile">
 			<span class="mobile-font">2017 - 2018</span> - Front End Developer @Portal Mestre de Obras
 		</p>
@@ -174,7 +180,8 @@
 
 	<!-- Contact -->
 	<div class="container  mt-10 container-contact" id="contact">
-		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-phone"></i> 05.</span>Get in Touch</p>
+		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-phone"></i> 05.</span>Get in Touch
+		</p>
 		<p class="resume2">Currently looking for new opportunities, my inbox is always open!</p>
 		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
 			through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
@@ -186,9 +193,12 @@
 	<br><br>
 
 	<footer class="container">
-		<a href="https://www.linkedin.com/in/daniel-gonçalo/"><i class="fa-brands fa-linkedin-in icon-color mr-2"></a></i><a href="https://github.com/Dany4k"><i class="fa-brands fa-github icon-color"></i></a>
+		<a href="mailto: dany4k@gmail.com"><i class="fa-solid fa-envelope icon-color mr-2"></a></i><a
+			href="https://www.linkedin.com/in/daniel-gonçalo/"><i
+				class="fa-brands fa-linkedin-in icon-color mr-2"></a></i><a href="https://github.com/Dany4k"><i
+				class="fa-brands fa-github icon-color"></i></a>
 		<br>
-		<span style="font-size: 16px; color:#8892b0; margin-top: 1%;" >Coded by</span> <a
+		<span style="font-size: 16px; color:#8892b0; margin-top: 1%;">Coded by</span> <a
 			href="https://www.linkedin.com/in/daniel-gonçalo/"> <span style="font-size: 15px;" color: #64ffda;>Daniel
 				Gonçalo</span></a></span>
 	</footer>
