--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="list-card">
 				<div>
 					<h3><i class="fa-solid fa-laptop-code"></i> Programming Languages</h3>
-					<p class="description_languages">HTML, CSS, Javascript</p>
+					<p class="description_languages">HTML, CSS, Javascript, Typescript, SQL</p>
 				</div>
 			</div>
 			<div class="list-card">
@@ -180,13 +180,12 @@
 
 	<!-- Contact -->
 	<div class="container  mt-10 container-contact" id="contact">
-		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-phone"></i> 05.</span>Get in Touch
-		</p>
+		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-phone"></i> 05.</span>Get in Touch</p>
 		<p class="resume2">Currently looking for new opportunities, my inbox is always open!</p>
 		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
 			through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
-		<span class="job-title"><a href="\attachments/Daniel Gonçalo CV 2023.pdf"
-				download="Daniel Gonçalo CV 2023.pdf">Download Resume</a></span>
+		<button class="cv-button"><a href="\attachments/Daniel Gonçalo CV 2023.pdf"
+			download="Daniel Gonçalo CV 2023.pdf"><i class="fa-solid fa-circle-down"></i> Download Resume</a></button>
 	</div>
 
 
@@ -198,9 +197,10 @@
 				class="fa-brands fa-linkedin-in icon-color mr-2"></a></i><a href="https://github.com/Dany4k"><i
 				class="fa-brands fa-github icon-color"></i></a>
 		<br>
-		<span style="font-size: 16px; color:#8892b0; margin-top: 1%;">Coded by</span> <a
-			href="https://www.linkedin.com/in/daniel-gonçalo/"> <span style="font-size: 15px;" color: #64ffda;>Daniel
-				Gonçalo</span></a></span>
+		<a
+			href="https://www.linkedin.com/in/daniel-gonçalo/"><span style="font-size: 16px; color:#8892b0; margin-top: 1%;">Coded by</span>  <span style="font-size: 15px;" color: #64ffda;>Daniel
+				Gonçalo</span></span>
+			</a>
 	</footer>
 </body>
 
