--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+	<div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+    </div> 
 	<script type="text/javascript" src="/myscript.js"></script>
 	<div class="container1">
 		<p class="nav"><a href="#contact"><span class="numbered_nav">05.</span>Contact Me</a></p>
@@ -51,6 +54,7 @@
 		</div>
 	</div>
 	<!-- Skills and languages -->
+	<img src="images/programing.gif" class="gif" alt="man-programming">
 	<div class="container been-animated" id="skills">
 		<div class="sections">
 			<h2 class="section-title"><span class="numbered"><i class="fa-solid fa-gear"></i> 02.</span>Skills</h2>
@@ -184,7 +188,7 @@
 		<p class="resume2">Currently looking for new opportunities, my inbox is always open!</p>
 		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
 			through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
-		<button class="cv-button"><a href="\attachments/Daniel Gonçalo CV 2023.pdf"
+		<button class="cv-button"><a href="\attachments/CV Daniel Gonçalo.pdf"
 			download="Daniel Gonçalo CV 2023.pdf"><i class="fa-solid fa-circle-down"></i> Download Resume</a></button>
 	</div>
 
@@ -203,5 +207,14 @@
 			</a>
 	</footer>
 </body>
-
 </html>
+
+<script>
+    window.onscroll = function() {myFunction()};
+function myFunction() {
+  var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+  var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+  var scrolled = (winScroll / height) * 100;
+  document.getElementById("myBar").style.width = scrolled + "%";
+}
+</script>
