--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 				(Infraestruturas de Portugal) and big consultant
 				companies like PwC (PricewaterhouseCoopers) building websites, portals and various web applications.
 			</p>
+			<p class="resume2"> Currently working as a front-end developer at SPMS. Working with HTML, CSS,
+				JS, PHP and WordPress framework. My day to day activities include adding new
+				features to the websites, fixing bugs and giving customer support to all SNS
+				entities.
+			</p>
 		</div>
 	</div>
 	<!-- Skills and languages -->
