--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
 			through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
 		<button class="cv-button"><a href="\attachments/CV Daniel Gonçalo.pdf"
-			download="Daniel Gonçalo CV 2023.pdf"><i class="fa-solid fa-circle-down"></i> Download Resume</a></button>
+			download="CV Daniel Goncalo 2024.pdf"><i class="fa-solid fa-circle-down"></i> Download Resume</a></button>
 	</div>
 
 
