--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
 		<p class="description-mobile">
 			<span class="mobile-font">Aug. 2021 - Jan. 2023</span> - Front End Analyst @PwC Portugal
 		</p>
+		<p class="description-mobile">
+			<span class="mobile-font">Jul. 2023 - Now</span> - Front End Analyst @Serviços Partilhados do Ministério da Saúde
+		</p>
+		
 	</div>
 
 	<!-- Contact -->
