--- a/index.html
+++ b/index.html
@@ -161,9 +161,20 @@
 			<li>
 				<span class="point"></span>
 				<p class="description">
-					Front End Analyst @PwC Portugal
+					Front End Analyst @PwC Portugal\
 				</p>
 				<span class="date">Aug. 2021 - Jan. 2023</span>
+			</li>
+		</ol>
+	</div>
+	<div class="container div-no-mobile mt-150" id="experiences">
+		<ol class="timeline">
+			<li>
+				<span class="point"></span>
+				<p class="description">
+					Front End Developer @Serviços Partilhados do Ministério da Saúde
+				</p>
+				<span class="date">2017 - 2018</span>
 			</li>
 		</ol>
 	</div>
