--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				<p class="description">
 					Front End Developer @Serviços Partilhados do Ministério da Saúde
 				</p>
-				<span class="date">2017 - 2018</span>
+				<span class="date">Jul. 2023 - Now</span>
 			</li>
 		</ol>
 	</div>
