--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 			<li>
 				<span class="point"></span>
 				<p class="description">
-					Front End Analyst @PwC Portugal\
+					Front End Analyst @PwC Portugal
 				</p>
 				<span class="date">Aug. 2021 - Jan. 2023</span>
 			</li>
