- Updating mobile styles;

--- a/index.html
+++ b/index.html
@@ -184,20 +184,20 @@
 		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-briefcase"></i> 04.</span>Job
 			Experiences</p>
 		<p class="description-mobile">
-			<span class="mobile-font">2017 - 2018</span> - Front End Developer @Portal Mestre de Obras
+			<span class="mobile-font">2017 - 2018</span> - Front End Developer <span class="company-name">@Portal Mestre de Obras</span>
 		</p>
 		<p class="description-mobile">
-			<span class="mobile-font">Jan. 2018 - Dez. 2020</span> - Front End Developer and Website Manager @ID
-			Training
+			<span class="mobile-font">Jan. 2018 - Dez. 2020</span> - Front End Developer and Website Manager <span class="company-name">@ID
+				Training</span>
 		</p>
 		<p class="description-mobile">
-			<span class="mobile-font">Jan. 2021 - Jul. 2021</span> - Front End Developer @Infraestruturas de Portugal
+			<span class="mobile-font">Jan. 2021 - Jul. 2021</span> - Front End Developer <span class="company-name">@Infraestruturas de Portugal</span>
 		</p>
 		<p class="description-mobile">
-			<span class="mobile-font">Aug. 2021 - Jan. 2023</span> - Front End Analyst @PwC Portugal
+			<span class="mobile-font">Aug. 2021 - Jan. 2023</span> - Front End Analyst <span class="company-name">@PwC Portugal</span>
 		</p>
 		<p class="description-mobile">
-			<span class="mobile-font">Jul. 2023 - Now</span> - Front End Analyst @Serviços Partilhados do Ministério da Saúde
+			<span class="mobile-font">Jul. 2023 - Now</span> - Front End Analyst <span class="company-name">@Serviços Partilhados do Ministério da Saúde</span>
 		</p>
 		
 	</div>
