Updated info and new CV;

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 				(Infraestruturas de Portugal) and big consultant
 				companies like PwC (PricewaterhouseCoopers) building websites, portals and various web applications.
 			</p>
-			<p class="resume2"> Currently working as a front-end developer at SPMS (Serviços Partilhados do Ministério da Saúde). Working with HTML, CSS,
-				JS, PHP and WordPress framework. My day to day activities include adding new
-				features to the websites, fixing bugs and giving customer support to all SNS
-				entities.
+			<p class="resume2"> My most recent work experience was as a Front-End Developer and WordPress Specialist at 
+				SPMS (Serviços Partilhados do Ministério da Saúde). I worked with HTML, CSS, JavaScript, PHP, and the WordPress 
+				framework. My daily activities included adding new features to websites, fixing bugs, providing customer 
+				support to all SNS entities and conducting training sessions for these entities.
 			</p>
 		</div>
 	</div>
@@ -66,13 +66,13 @@
 			<div class="list-card">
 				<div>
 					<h3><i class="fa-solid fa-laptop-code"></i> Programming Languages</h3>
-					<p class="description_languages">HTML, CSS, Javascript, Typescript, SQL</p>
+					<p class="description_languages">HTML, CSS, PHP, Javascript, Typescript, SQL</p>
 				</div>
 			</div>
 			<div class="list-card">
 				<div>
 					<h3><i class="fa-solid fa-database"></i> Frameworks and Libraries</h3>
-					<p class="description_languages">Wordpress, Drupal, Prestashop, Angular, Bootstrap</p>
+					<p class="description_languages">Wordpress, Drupal, Prestashop, React, Bootstrap</p>
 				</div>
 			</div>
 		</div>
@@ -174,7 +174,7 @@
 				<p class="description">
 					Front End Developer @Serviços Partilhados do Ministério da Saúde
 				</p>
-				<span class="date">Jul. 2023 - Now</span>
+				<span class="date">Jul. 2023 - Jan. 2025</span>
 			</li>
 		</ol>
 	</div>
@@ -197,7 +197,7 @@
 			<span class="mobile-font">Aug. 2021 - Jan. 2023</span> - Front End Analyst <span class="company-name">@PwC Portugal</span>
 		</p>
 		<p class="description-mobile">
-			<span class="mobile-font">Jul. 2023 - Now</span> - Front End Analyst <span class="company-name">@Serviços Partilhados do Ministério da Saúde</span>
+			<span class="mobile-font">Jul. 2023 - Jan. 2025</span> - Front End Analyst <span class="company-name">@Serviços Partilhados do Ministério da Saúde</span>
 		</p>
 		
 	</div>
@@ -209,7 +209,7 @@
 		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
 			through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
 		<button class="cv-button"><a href="\attachments/CV Daniel Gonçalo.pdf"
-			download="CV Daniel Goncalo 2024.pdf"><i class="fa-solid fa-circle-down"></i> Download Resume</a></button>
+			download="CV_Daniel_Goncalo_2025.pdf"><i class="fa-solid fa-circle-down"></i>Download Resume</a></button>
 	</div>
 
 
