--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@
 				</p>
 				<span class="date">Jul. 2023 - Jan. 2025</span>
 			</li>
+			<li>
+				<span class="point"></span>
+				<p class="description">
+					Web Developer @TeamDev
+				</p>
+				<span class="date">Feb. 2025 - Currently</span>
+			</li>
 		</ol>
 	</div>
 
@@ -199,13 +206,15 @@
 		<p class="description-mobile">
 			<span class="mobile-font">Jul. 2023 - Jan. 2025</span> - Front End Analyst <span class="company-name">@Serviços Partilhados do Ministério da Saúde</span>
 		</p>
+		<p class="description-mobile">
+			<span class="mobile-font">Feb. 2025 - Currently</span> - Web Developer <span class="company-name">@TeamDev</span>
+		</p>
 		
 	</div>
 
 	<!-- Contact -->
 	<div class="container  mt-10 container-contact" id="contact">
 		<p class="section-title line"><span class="numbered"><i class="fa-solid fa-phone"></i> 05.</span>Get in Touch</p>
-		<p class="resume2">Currently looking for new opportunities, my inbox is always open!</p>
 		<p class="resume2">You can contact me by <a href="mailto: dany4k@gmail.com" style="color:#64ffda;">email</a> or
 			through <a href="https://www.linkedin.com/in/daniel-gonçalo/" style="color:#64ffda;">Linkedin</a>.</p>
 		<button class="cv-button"><a href="\attachments/CV Daniel Gonçalo.pdf"
