Add companies websites

--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
 			<li>
 				<span class="point"></span>
 				<p class="description">
-					Front End Developer @Infraestruturas de Portugal
+					Front End Developer <a href="https://www.infraestruturasdeportugal.pt/" target="_blank">@Infraestruturas de Portugal</a>
 				</p>
 				<span class="date">Jan. 2021 - Jul. 2021</span>
 			</li>
 			<li>
 				<span class="point"></span>
 				<p class="description">
-					Front End Analyst @PwC Portugal
+					Front End Analyst <a href="https://www.pwc.pt/" target="_blank">@PwC Portugal</a>
 				</p>
 				<span class="date">Aug. 2021 - Jan. 2023</span>
 			</li>
@@ -172,14 +172,15 @@
 			<li>
 				<span class="point"></span>
 				<p class="description">
-					Front End Developer @Serviços Partilhados do Ministério da Saúde
+					Front End Developer <a href="https://www.spms.min-saude.pt/" target="_blank">@Serviços Partilhados do Ministério da Saúde</a>
 				</p>
 				<span class="date">Jul. 2023 - Jan. 2025</span>
 			</li>
 			<li>
 				<span class="point"></span>
 				<p class="description">
-					Web Developer @TeamDev
+					Web Developer <a href="https://teamdev.com/" target="_blank">@TeamDev</a>
+
 				</p>
 				<span class="date">Feb. 2025 - Currently</span>
 			</li>
