Add new frameworks

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="list-card">
 				<div>
 					<h3><i class="fa-solid fa-database"></i> Frameworks and Libraries</h3>
-					<p class="description_languages">Wordpress, Drupal, Prestashop, React, Bootstrap</p>
+					<p class="description_languages">Wordpress, Drupal, Prestashop, React, Bootstrap, Hugo, Jekyll</p>
 				</div>
 			</div>
 		</div>
